# bioskeptic

./: .gitignore  README.md  pyproject.toml  render.yaml
bioskeptic/benchmarks/: README.md  build.py  drug_disease.jsonl  evaluate.py  target_disease.jsonl
bioskeptic/benchmarks/sources/: clingen_validity.csv
bioskeptic/data/: anatomy.py  clingen.py  clinicaltrials.py  core.py  epigraphdb.py  gtex.py  hpa.py  llm.py  openfda.py  opentargets.py  pubmed.py
bioskeptic/docs/: datapoints.md  refute_mechanisms.md
bioskeptic/refine/: __init__.py  audit.py  edges.py
bioskeptic/refute/: core.py  m01_direction.py  m02_colocalization.py  m03_cis_mr.py  m04_text_mining.py  m06_haploinsufficiency.py  m07_expression.py  m10_single_cell.py  m13_mouse_ko.py  redteam.py  registry.py
bioskeptic/resolver/: disease.py  drug.py  fetch.py  target.py
docs/: data_sources.md
kg_audit/: __init__.py  audit.py  format.py  sample_drkg_100.csv
mcp_server/: server.py  tools.py
web/: agent.py  app.py  guard.py  index.html
web/static/: app.js  comparison.json  data_refinement.json  style.css
