[project]
name = "bioskeptic"
version = "0.1.0"
description = "A red team for drug-discovery claims: deterministic, cited refutation heuristics."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "mcp[cli]>=1.28.1",
    "pandas>=3.0.3",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Package the new trees; `legacy/` is read-only reference, never shipped/imported.
[tool.setuptools.packages.find]
include = ["bioskeptic*", "mcp_server*", "web*"]
